cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-extended-db-node
version:                1.0.0
synopsis:               The DB node for the Cardano Block Explorer
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Explorer.Plugin.Extended

  build-depends:        base                            >= 4.12         && < 4.13
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-binary
                      , cardano-crypto
                      , cardano-crypto-wrapper
                      , cardano-explorer-db
                      , cardano-explorer-node
                      , containers
                      , contra-tracer
                      , cryptonite
                      , extra
                      , memory
                      , monad-logger
                      , network
                      , ouroboros-consensus
                      , ouroboros-network
                      , persistent
                      , prometheus
                      , serialise
                      , text
                      , time
                      , transformers
                      , transformers-except

executable cardano-extended-db-node
  default-language:     Haskell2010
  main-is:              cardano-extended-db-node.hs
  hs-source-dirs:       app

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe

  build-depends:        base                            >= 4.12         && < 4.13
                      , bytestring
                      , cardano-explorer-db
                      , cardano-explorer-node
                      , cardano-extended-db-node
                      , cardano-prelude
                      , optparse-applicative
                      , ouroboros-network
                      , text
