cabal-version:          3.0

name:                   cardano-smash-server
version:                13.1.1.3
synopsis:               The Cardano smash server
description:            Please see the README on GitHub at
                        <https://github.com/input-output-hk/cardano-db-sync/cardano-smash-server/#readme>
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md

custom-setup
  setup-depends:
                        base
                      , bytestring
                      , Cabal
                      , cardano-crypto-class
                      , directory
                      , filepath

flag disable-basic-auth
  description: Disable basic authentication scheme for other authentication mechanisms.
  default:     False

library
  if flag(disable-basic-auth)
    cpp-options:        -DDISABLE_BASIC_AUTH

  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -O2
                        -Wall
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -fno-warn-orphans

  exposed-modules:      Cardano.SMASH.Server.Api
                        Cardano.SMASH.Server.Config
                        Cardano.SMASH.Server.FetchPolicies
                        Cardano.SMASH.Server.Impl
                        Cardano.SMASH.Server.PoolDataLayer
                        Cardano.SMASH.Server.Run
                        Cardano.SMASH.Server.Types

  other-modules:        Paths_cardano_smash_server

  build-depends:
                        aeson
                      , base                        >= 4.14         && < 5
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-db
                      , cardano-prelude
                      , containers
                      , http-conduit
                      , iohk-monitoring
                      , network-uri
                      , persistent-postgresql
                      , quiet
                      , resource-pool
                      , servant-server
                      , servant-swagger
                      , swagger2
                      , text
                      , time
                      , transformers-except
                      , wai
                      , warp
                      , yaml

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

executable cardano-smash-server
  default-language:     Haskell2010
  main-is:              cardano-smash-server.hs
  hs-source-dirs:       app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  autogen-modules:      Paths_cardano_smash_server

  other-modules:        Paths_cardano_smash_server

  build-depends:        base
                      , cardano-db
                      , cardano-smash-server
                      , cardano-prelude
                      , optparse-applicative
                      , text



