cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-sync
version:                8.0.0
synopsis:               The Cardano Sync node
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Werror
                        -Wunused-imports
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Cardano.Sync
                        Cardano.Sync.Api
                        Cardano.Sync.Config
                        Cardano.Sync.Config.Byron
                        Cardano.Sync.Config.Cardano
                        Cardano.Sync.Config.Node
                        Cardano.Sync.Config.Shelley
                        Cardano.Sync.Config.Types
                        Cardano.Sync.Database
                        Cardano.Sync.DbAction
                        Cardano.Sync.Error

                        Cardano.Sync.LedgerState
                        Cardano.Sync.Metrics

                        Cardano.Sync.Era.Byron.Util
                        Cardano.Sync.Era.Cardano.Util

                        Cardano.Sync.Era.Shelley.Generic
                        Cardano.Sync.Era.Shelley.Generic.EpochUpdate
                        Cardano.Sync.Era.Shelley.Generic.ProtoParams
                        Cardano.Sync.Era.Shelley.Generic.Rewards
                        Cardano.Sync.Era.Shelley.Generic.StakeCred
                        Cardano.Sync.Era.Shelley.Generic.StakeDist

                        Cardano.Sync.Plugin

                        Cardano.Sync.StateQuery
                        Cardano.Sync.Tracing.ToObjectOrphans
                        Cardano.Sync.Types
                        Cardano.Sync.Util

  build-depends:        base                            >= 4.12         && < 4.15
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-binary
                      , cardano-client
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-ledger
                      -- Only for some orphan tracing instances.
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting
                      , cborg
                      , containers
                      , contra-tracer
                      , cryptonite
                      , directory
                      , extra
                      , filepath
                      , iohk-monitoring
                      , lifted-base
                      , monad-control
                      , memory
                      , network-mux
                      , pretty-show
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , ouroboros-network-framework
                      , prometheus
                      , shelley-spec-ledger
                      , stm
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , unix
                      , yaml
