cabal-version:          2.2

-- http://haskell.org/cabal/users-guide/

name:                   cardano-sync
version:                10.0.2
synopsis:               The Cardano Sync node
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.Sync
                        Cardano.Sync.Api
                        Cardano.Sync.Config
                        Cardano.Sync.Config.Alonzo
                        Cardano.Sync.Config.Byron
                        Cardano.Sync.Config.Cardano
                        Cardano.Sync.Config.Node
                        Cardano.Sync.Config.Shelley
                        Cardano.Sync.Config.Types
                        Cardano.Sync.Database
                        Cardano.Sync.DbAction
                        Cardano.Sync.Error

                        Cardano.Sync.LedgerState

                        Cardano.Sync.Era.Byron.Util
                        Cardano.Sync.Era.Cardano.Util

                        Cardano.Sync.Era.Shelley.Generic
                        Cardano.Sync.Era.Shelley.Generic.EpochUpdate
                        Cardano.Sync.Era.Shelley.Generic.ProtoParams
                        Cardano.Sync.Era.Shelley.Generic.Rewards
                        Cardano.Sync.Era.Shelley.Generic.StakeCred
                        Cardano.Sync.Era.Shelley.Generic.StakeDist

                        Cardano.Sync.Metrics
                        Cardano.Sync.Plugin

                        Cardano.Sync.StateQuery
                        Cardano.Sync.Tracing.ToObjectOrphans
                        Cardano.Sync.Types
                        Cardano.Sync.Util

  build-depends:        base                            >= 4.14         && < 4.16
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-client
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-wrapper
                      , cardano-db
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-shelley-ma
                      -- Only for some orphan tracing instances.
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting
                      , cborg
                      , containers
                      , contra-tracer
                      , directory
                      , extra
                      , filepath
                      , iohk-monitoring
                      , io-classes
                      , lifted-base
                      , monad-control
                      , memory
                      , network-mux
                      , pretty-show
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , ouroboros-network-framework
                      , shelley-spec-ledger
                      , stm
                      , strict
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , unix
                      , yaml
