cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-db-test
version:                0.1.0.0
synopsis:               Tests for the base functionality of the cardano-db library
description:            Code for the Cardano DB Sync node that is shared between the
                        cardano-db-node and other components.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple

library
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Test.Property.Cardano.Db.Types
                        Test.IO.Cardano.Db.Util


  build-depends:        aeson
                      , base                            >= 4.12         && < 4.15
                      , bytestring
                      , cardano-db
                      , cardano-ledger
                      , hedgehog
                      , persistent
                      , text
                      , time
                      , transformers
                      , wide-word
