cabal-version:          3.0

name:                   cardano-db-test
version:                13.1.1.3
synopsis:               Tests for the base functionality of the cardano-db library
description:            Code for the Cardano DB Sync node that is shared between the
                        cardano-db-node and other components.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Simple

library
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Test.Property.Cardano.Db.Types
                        Test.IO.Cardano.Db.Util


  build-depends:        base                            >= 4.14         && < 5
                      , aeson
                      , bytestring
                      , cardano-db
                      , cardano-ledger-byron
                      , extra
                      , hedgehog
                      , persistent
                      , text
                      , time
                      , transformers
                      , wide-word

                      , base16-bytestring
                      , bytestring
                      , aeson
                      , cardano-crypto-class
                      , cardano-db
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-mary
                      , persistent
                      , hedgehog
                      , text
                      , wide-word
