cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   cardano-explorer-db-test
version:                0.1.0.0
synopsis:               A block explorer for the Cardano chain
description:            Code for the Cardano Block Explorer that is shared between the
                        cardano-explorer-db-node and the cardano-explorer web application.
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Test.IO.Explorer.DB.Util


  build-depends:        aeson
                      , base                            >= 4.12         && < 4.13
                      , base16-bytestring
                      , bytestring
                      , cardano-explorer-db
                      , conduit
                      , conduit-extra
                      , containers
                      , contra-tracer
                      , directory
                      , esqueleto
                      , extra
                      , fast-logger
                      , filepath
                      , iohk-monitoring
                      , monad-logger
                      , persistent
                      , persistent-postgresql
                      , persistent-template >= 2.7.0
                      , postgresql-simple
                      , resourcet
                      , scientific
                      , text
                      , template-haskell
                      , time
                      , transformers
                      -- This is never intended to run on non-POSIX systems.
                      , unix
